manifest/hypercloud/templates/hypercloud-single-operator/etc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    hypercloud: single-operator
  name: hypercloud-single-operator-controller-manager-metrics-service
  namespace: hypercloud5-system
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    hypercloud: single-operator
---
apiVersion: v1
kind: Service
metadata:
  name: hypercloud-single-operator-webhook-service
  namespace: hypercloud5-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    hypercloud: single-operator
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: hypercloud5-system/hypercloud-single-operator-serving-cert
  name: hypercloud-single-operator-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    service:
      name: hypercloud-single-operator-webhook-service
      namespace: hypercloud5-system
      path: /validate-claim-tmax-io-v1alpha1-namespaceclaim
  failurePolicy: Fail
  name: vnamespaceclaim.kb.io
  rules:
  - apiGroups:
    - claim.tmax.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - namespaceclaims
    - namespaceclaims/status
  sideEffects: NoneOnDryRun
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    service:
      name: hypercloud-single-operator-webhook-service
      namespace: hypercloud5-system
      path: /validate-claim-tmax-io-v1alpha1-resourcequotaclaim
  failurePolicy: Fail
  name: vresourcequotaclaim.kb.io
  rules:
  - apiGroups:
    - claim.tmax.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - resourcequotaclaims
    - resourcequotaclaims/status
  sideEffects: NoneOnDryRun
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    service:
      name: hypercloud-single-operator-webhook-service
      namespace: hypercloud5-system
      path: /validate-claim-tmax-io-v1alpha1-rolebindingclaim
  failurePolicy: Fail
  name: vrolebindingclaim.kb.io
  rules:
  - apiGroups:
    - claim.tmax.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - rolebindingclaims
    - rolebindingclaims/status
  sideEffects: NoneOnDryRun
